TA-254 Change version of Java from 11 to 17 (#188)
* Java version in POM updated to 17.
* Java version in workflow for Github updated to 17.
* Add SampleDataException.